# nunning

./: .gitignore  Makefile  README.md  event_handler.go  event_handler_test.go  file_event_handler.go  main.go  s3_uploader.go  video_event_handler.go
.github/workflows/: go.yaml  go.yml
buildtool/: BUILD.yaml  Dockerfile  README.md  SyntaxExample.yaml  go.mod  go.sum  main.go
buildtool/buildtool/: build.go  build_file.go  build_target.go  build_tool.go  build_tool_argument.go  build_tool_arguments.go  build_tool_has_arguments_test.go  build_tool_options.go  const.go  input.go  interface_definitions.go  output.go  public.go  public_test.go  var.go
buildtool/buildtool/features/: build_tool_has_arguments.feature  template_processing_of_buildtool_arguments.feature
buildtool/buildtools/: Dockerfile.go  README.md
fuzzysearch/: README.md  start_pinot.sh
fuzzysearch/apache-pinot/: docker-compose.yml
fuzzysearch/quickwit/: README.md  docker-compose.yml
github.com/mrmod/: README.md
github.com/mrmod/bazelcredentialhelper/: main.go
github.com/mrmod/credentialstore/: main.go
github.com/mrmod/fuzzysearch/: go.mod  index.go  journal.go  main.go  main_test.go  server.go  tokenizer.go
github.com/mrmod/homewatch/: Dockerfile  Makefile  README.md  eventWithDetection.json  go.mod  go.sum  homewatch.service  index.go  inventory.yaml  main.go  message_handler.go  messages.go  messages_test.go  publishers.go  s3_uploader.go  setup.playbook.yaml  sftp.put.message  sftp.rename.message  sftp.unknownCommand.message  start.sh  syslog_test.go  test.idx
github.com/mrmod/homewatch/_deploy/: entrypoint.sh.j2  inventory.yaml  pre_build.playbook.yaml  pre_build.vars.EXAMPLE.yaml  setup.playbook.yaml  setup.vars.EXAMPLE.yaml
github.com/mrmod/homewatch/_dist/: entrypoint.sh
github.com/mrmod/homewatch/_infra/: README.md  main.tf  providers.tf
github.com/mrmod/homewatch/_infra/container_repository/: main.tf
github.com/mrmod/homewatch/testdata/: internalSftp.rename.syslogMessage  internalSftp.sessionClosed.syslogMessage
github.com/mrmod/homewatch/v2/: fslistener.go  metrics.go
github.com/mrmod/httptransportinjector/: main.go  main_test.go
homewatch-agent/: README.md  file_event_handler_test.go  index_test.go  message_handler.go  release.sh  syslog.go
homewatch/.github/workflows/: test_homewatch_agent.yaml
homewatch/default-origin/: index.html
homewatch/default-origin/ui/: mockapi.py  package-lock.json  package.json
homewatch/default-origin/ui/src/: App.js  CameraContainer.js  Cameras.js  Error.js  ErrorBoundary.js  EventVisualization.js  ManageCamera.js  RawDatapointsData.js  Video.js  api.js  util.js
homewatch/lambda_cookie_authorizer/: handler.py
homewatch/lambda_dav_transcoder/: handler.py  transcode.py
homewatch/lambda_videos/: handler.py
homewatch/platform/: main.tf  providers.tf
terrastate/: .bazelignore  .bazelrc  .gitignore  .terraform.lock.hcl  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  create_plan.sh  deps.bzl  dev.s3.tfbackend  main.tf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  self.dev.plan
terrastate/backend/: BUILD.bazel  dev.plan.json  dev.remove-api-gw.plan.json  dev.state.json  go.mod  go.sum  main.go  self.dev.plan.json
terrastate/backend/analyzer/: BUILD.bazel  config.go  get_plan.go  plan_analyzer.go  plan_analyzer_test.go  save_plan.go
terrastate/webui/: BUILD.bazel  package-lock.json  package.json
terrastate/webui/src/: App.js  BUILD.bazel  ChangeDiffs.js  ChangeSet.js  CreateDetailCard.js  DeleteDetailCard.js  DetailContainer.js  PlannedChange.js  PlannedChanges.js  UpdateDetailCard.js  client.js  index.js
v2/: fslistener.go
