load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mrmod/terrastate
gazelle(name = "gazelle")

go_library(
    name = "terrastate_lib",
    srcs = ["main.go"],
    importpath = "github.com/mrmod/terrastate",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/analyzer",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@com_github_go_chi_cors//:cors",
    ],
)

go_binary(
    name = "backend",
    data = ["config.dev.json"],
    embed = [":terrastate_lib"],
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=backend/go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)
