load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_devserver", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//webui:react-scripts/package_json.bzl", cra_bin = "bin")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

CRA_DEPS = [
    "//webui/public",
    "//webui/src",
    "package.json",
    ":node_modules/eslint",
    ":node_modules/react-dom",
    ":node_modules/react-scripts",
    ":node_modules/react",
    ":node_modules/@mui/material",
    ":node_modules/web-vitals",
    # "//webui/.env.local",
] + glob(include = [
    "src/**",
    "public/**",
    ".env.local",
])

cra_bin.react_scripts(
    # Note: If you want to change the name make sure you update BUILD_PATH below accordingly
    # https://create-react-app.dev/docs/advanced-configuration/
    name = "build",
    srcs = CRA_DEPS,
    args = ["build"],
    chdir = package_name(),
    env = {"BUILD_PATH": "./build"},
    out_dirs = ["build"],
)

cra_bin.react_scripts_binary(
    name = "react_scripts",
    chdir = package_name(),
)

js_test(
    name = "build_smoke_test",
    data = ["build"],
    entry_point = "build_smoke_test.js",
)

js_run_devserver(
    name = "start",
    args = ["start"],
    data = CRA_DEPS,
    # command = "node_modules/.bin/react-scripts",
    tool = ":react_scripts",
)

# ts_config(
#     name = "tsconfig",
#     src = "tsconfig.json",
#     visibility = ["//visibility:public"],
# )

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)

# js_library(
#     name = "jest_config",
#     srcs = ["jest.config.js"],
#     visibility = ["//visibility:public"],
# )
